# peakachu

./: .gitignore  Chess.hs  frp.hs  peakachu.cabal  testFrp.hs
examples/: guess.hs
src/Control/: FilterCategory.hs  Lift.hs  SECombinator.hs
src/Control/Applicative/: Define.hs
src/Control/Concurrent/MVar/: YC.hs
src/Control/Lift/: Overlap.hs
src/Control/Monad/Cont/: Monoid.hs
src/Data/: Cons.hs  InfiniteStream.hs  Newtype.hs
src/Data/ADT/: Getters.hs
src/Data/Bijection/: YC.hs
src/Data/InfiniteStream/: Item.hs
src/FRP/: Peakachu.hs
src/FRP/Peakachu/: Backend.hs  Internal.hs  Program.hs
src/FRP/Peakachu/Backend/: File.hs  GLUT.hs  IO.hs  Internal.hs  StdIO.hs  Time.hs
src/FRP/Peakachu/Backend/GLUT/: Getters.hs
src/FRP/Peakachu/Program/: Cont.hs
