Name:                peakachu
Version:             0.2
Category:            FRP
Synopsis:            An FRP library with a GLUT backend
Description:
  An experiemental simple FRP library.
  GLUT backend included.
License:             BSD3
License-file:        LICENSE
Author:              Yair Chuchem
Maintainer:          yairchu@gmail.com
Cabal-Version:       >= 1.2
Stability:           experiemental
Build-type:          Simple

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base >= 3 && < 5, GLUT, time, mtl
  Exposed-modules:     FRP.Peakachu
                       FRP.Peakachu.Program
                       FRP.Peakachu.Backend
                       FRP.Peakachu.Backend.File
                       FRP.Peakachu.Backend.GLUT
                       FRP.Peakachu.Backend.Time
                       Control.Concurrent.MVar.YC
  ghc-options:         -O2 -Wall

